ChangeLog for package rkwarddev

## 0.01-5 (2011-09-23)
  - added functions rk.XML.formula(), rk.XML.convert(), rk.XML.connect() and rk.XML.logic()
  - added possibility to add custom XML code to the logic section with rk.XML.plugin()
    and rk.plugin.skeleton()
  - fixed id setting in rk.XML.browser()

## 0.01-4 (2011-09-22)
  - fixed wrong doc link and one wrong object name in rk.plugin.skeleton()
  - fixed attribute typo in rk.XML.vars()
  - fixed issue with auto-generated IDs (now using "_" instead of ".")
  - added wizard code options to rk.XML.plugin() and rk.plugin.skeleton()
  - added "edit" and "create" options to rk.plugin.skeleton()
  - added function rk.XML.varslot()
  - added possibility to add custom XML nodes to the varslot in rk.XML.vars()
  - added possibility to paste ready-to-use JavaScript code directly to the preprocess(),
    calculate() and printout() functions, respectively

## 0.01-3 (2011-09-16)
  - added rk.XML.spinbox() and missing options to rk.XML.browser() and rk.XML.saveobj()
  - corrected browser default type in rk.XML.browser()
  - added wizard option to rk.plugin.skeleton()

## 0.01-2 (2011-09-15)
  - reworked rk.XML.about() to use person class objects for authors, and need less info to
    produce usable output

## 0.01-1 (2011-09-05)
  - added rk.JS.scan(), rk.JS.doc(), rk.JS.array(), rk.rkh.scan() and rk.rkh.doc()
  - added rk.XML.browser(),  rk.XML.input(),  rk.XML.saveobj(),  rk.XML.stretch() and  rk.XML.text()
  - added rk.testsuite.doc()
  - shortened package name from "rkwardplugdev" to "rkwarddev"
  - merged code into RKWard's svn tree

## 0.01-0 (2011-08-30)
  - forked rk.* functions from XiMpLe package into this one
  - added functions rk.XML.cbox(), rk.XML.row(), rk.XML.col(), rk.XML.frame(),
    rk.XML.radio() and rk.XML.vars()
  - rewrote the ID handling
  - added docs
  - initial release via reaktanz.de