@@ -15,7 +15,7 @@ URL: http://rkward.sourceforge.net
 Authors@R: c(person(given="Meik", family="Michalke",
     email="meik.michalke@hhu.de", role=c("aut", "cre")))
 Version: 0.01-5
-Date: 2011-09-24
+Date: 2011-09-25
 Collate:
     'rk-internal.R'
     'rk.JS.array.R'
@@ -34,6 +34,7 @@ Collate:
     'rk.XML.connect.R'
     'rk.XML.convert.R'
     'rk.XML.dropdown.R'
+    'rk.XML.external.R'
     'rk.XML.formula.R'
     'rk.XML.frame.R'
     'rk.XML.input.R'
@@ -43,6 +44,7 @@ Collate:
     'rk.XML.radio.R'
     'rk.XML.row.R'
     'rk.XML.saveobj.R'
+    'rk.XML.set.R'
     'rk.XML.spinbox.R'
     'rk.XML.stretch.R'
     'rk.XML.tabbook.R'
