@@ -12,6 +12,7 @@ export(rk.XML.col)
 export(rk.XML.connect)
 export(rk.XML.convert)
 export(rk.XML.dropdown)
+export(rk.XML.external)
 export(rk.XML.formula)
 export(rk.XML.frame)
 export(rk.XML.input)
@@ -21,6 +22,7 @@ export(rk.XML.pluginmap)
 export(rk.XML.radio)
 export(rk.XML.row)
 export(rk.XML.saveobj)
+export(rk.XML.set)
 export(rk.XML.spinbox)
 export(rk.XML.stretch)
 export(rk.XML.tabbook)
