@@ -1,7 +1,8 @@
 ChangeLog for package rkwarddev
 
 ## 0.01-5 (2011-09-23)
-  - added functions rk.XML.formula(), rk.XML.convert(), rk.XML.connect() and rk.XML.logic()
+  - added functions rk.XML.formula(), rk.XML.convert(), rk.XML.connect(), rk.XML.logic(),
+    rk.XML.set() and rk.XML.external()
   - added possibility to add custom XML code to the logic section with rk.XML.plugin()
     and rk.plugin.skeleton()
   - fixed id setting in rk.XML.browser()
